[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfm"
version = "0.0.1"
description = "A simple python implementation of structure-from-motion."
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.24",
  "scipy >= 1.10",
  "matplotlib >= 3.6",
  "opencv-python >= 4.7",
]
